--- a/EmployeestWeb/appsettings.json
+++ b/EmployeestWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EmployeestDbConnString": "Host=localhost;Port=5432;Database=EmployeestWebDb;Username=postgres;Password=1234567890"
+    "EmployeestDbConnString": "Host=localhost;Port=5432;Database=EmployeestWebDb"
   }
 }
