--- a/EmployeestWeb/appsettings.json
+++ b/EmployeestWeb/appsettings.json
@@ -26,6 +26,12 @@
           "path": "Logs\\logs.json",
           "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
         }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341"
+        }
       }
     ]
   },
