#57: Employee dashboard page created, only UI temporary

--- a/EmployeestWeb/EmployeestWeb.csproj
+++ b/EmployeestWeb/EmployeestWeb.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\EmployeestWeb.BLL\EmployeestWeb.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\assets\mini-logo.svg" />
+  </ItemGroup>
+
 </Project>
