#41: fixed bugs after resolving merge conflicts

--- a/EmployeestWeb/appsettings.json
+++ b/EmployeestWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EmployeestDbConnString": "Host=localhost;Port=5432;Database=employeest;Username=mvovchuk;Password=admin"
+    "EmployeestDbConnString": "Host=localhost;Port=5432;Database=EmployeestWebDb"
   }
 }
