--- a/EmployeestWeb/EmployeestWeb.csproj
+++ b/EmployeestWeb/EmployeestWeb.csproj
@@ -14,6 +14,9 @@
     <Content Remove="NewFolder\**" />
     <EmbeddedResource Remove="NewFolder\**" />
     <None Remove="NewFolder\**" />
+    <None Update="Views\Shared\_LeftSidebar.cshtml.css">
+      <DependentUpon>_LeftSidebar.cshtml</DependentUpon>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
