--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -83,7 +83,7 @@ jobs:
           
   run-tests:
     name: Run unit tests
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: set pr build number (if pr)
         id: PRNUMBER
@@ -92,7 +92,7 @@ jobs:
 
       - name: Set Test Title
         run: | 
-            if (${{ github.event_name == 'pull_request' }})
+            if ${{ github.event_name == 'pull_request' }}
             then
               echo "title=Test Run for PR #${{steps.PRNUMBER.outputs.pr}} (${{github.run_number}})" >> $GITHUB_ENV
               echo "file_name=TestReport.${{steps.PRNUMBER.outputs.pr}}.${{github.run_number}}.md" >> $GITHUB_ENV              
