--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -102,7 +102,7 @@ jobs:
             fi
           
       - name: Test PR      
-        run: dotnet test --no-restore --no-build --configuration $config --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
+        run: dotnet test EmplyeestWeb.Tests/EmployeestWeb.Tests.csproj --no-restore --no-build --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
         
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2
