--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -102,7 +102,7 @@ jobs:
             fi
           
       - name: Test PR      
-        run: dotnet test --no-restore --no-build --logger:"liquid.md;LogFileName=${{github.workspace}}/${{env.file_name}};Title=${{env.title}};"
+        run: dotnet test ${{github.workspace}}/EmployeestWeb.Tests/EmployeestWeb.Tests.csproj
         
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2
