--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -85,6 +85,18 @@ jobs:
     name: Run unit tests
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.101    
+      
+      - name: Install dependencies
+        run: dotnet restore
+  
+      - name: Build
+        run: dotnet build --configuration $config --no-restore
+    
       - name: set pr build number (if pr)
         id: PRNUMBER
         if: ${{ github.event_name == 'pull_request' }}
