--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -95,7 +95,7 @@ jobs:
         run: dotnet restore
   
       - name: Build
-        run: dotnet build --configuration $config --no-restore
+        run: dotnet build --no-restore
     
       - name: set pr build number (if pr)
         id: PRNUMBER
