--- a/EmployeestWeb/appsettings.json
+++ b/EmployeestWeb/appsettings.json
@@ -38,6 +38,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EmployeestDbConnString": "Host=localhost;Port=5432;Database=EmployeestWebDb;User ID=postgres;Password=1234567890"
+    "EmployeestDbConnString": ""
   }
 }
