#85: Added environments and removed connection string from appsettings

--- a/EmployeestWeb/appsettings.json
+++ b/EmployeestWeb/appsettings.json
@@ -35,9 +35,5 @@
       }
     ]
   },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "EmployeestDbConnString": "Host=localhost;Port=5432;Database=EmployeestWebDb;User Id=postgres;Password=password"
-  }
+  "AllowedHosts": "*"
 }
