#100: added credentials to production env

--- a/EmployeestWeb/appsettings.Production.json
+++ b/EmployeestWeb/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "EmployeestDbConnString": "Host=host;Port=1234;Database=db;User ID=userId;Password=password"
+    "EmployeestDbConnString": "Host=db.vxxvqwkxswygvhvyvnmk.supabase.co;Port=5432;Database=postgres;User ID=postgres;Password=<Employeest>2023"
   }
 }
