--- a/EmployeestWeb/Properties/launchSettings.json
+++ b/EmployeestWeb/Properties/launchSettings.json
@@ -13,14 +13,14 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7007;http://localhost:5139",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
